[package]
name = "bitlens-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
ctrlc = "3.4.7"
deadpool = { version = "0.12.2", features = ["rt_tokio_1"] }
file-rotate = "0.8.0"
hex = "0.4.3"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
ouroboros = "0.18.5"
primitive-types = "0.13.1"
rand = "0.9.1"
rusqlite = { version = "0.36.0", features = ["bundled"] }
sha2 = { version = "0.10.9", features = ["asm", "asm-aarch64"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
slog-term = "2.9.1"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
rocksdb = { version = "0.23.0", features = [
    "bindgen-runtime",
    "zstd",
], default-features = false }
num_cpus = "1.17.0"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
ripemd = "0.1.3"
k256 = "0.13.4"
prometheus = "0.14.0"
axum = "0.8.4"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
tracking-allocator = "0.4.0"
either = "1.15.0"
